# compiz

./: .gitignore  AUTHORS  COPYING  COPYING-COMPIZ  COPYING-ICONS  Makefile.am  NEWS  README  configure.ac  e-module-compiz.edc  e_modules-compiz.spec.in  module.desktop.in
src/: Makefile.mk  compiz.c  compiz_gl.c  e_mod_main.c  e_mod_main.h  jwzgles.c  jwzgles.h  jwzglesI.h
src/exports/: Makefile.mk  core.c  cursor.c  display.c  event.c  fragment.c  main.c  match.c  matrix.c  metadata.c  object.c  option.c  paint.c  plugin.c  privates.c  screen.c  session.c  texture.c  window.c
src/exports/plugins/: Makefile.am  annotate.c  blur.c  clone.c  commands.c  cube.c  decoration.c  fade.c  fuse.c  ini.c  inotify.c  matecompat.c  minimize.c  move.c  obs.c  place.c  png.c  regex.c  resize.c  rotate.c  scale.c  screenshot.c  svg.c  switcher.c  video.c  wall.c  wall_options.c  water.c  wobbly.c  zoom.c
